<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/mydialog_bg"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/set_nick_title"
        android:textColor="@color/col_text1"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/et_nickdialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_nick"
        android:maxLength="7"
        android:textColor="@color/col_text1"
        android:textSize="15dp"
        android:theme="@style/MyEditText" />

    <TextView
        android:id="@+id/et_nickdialog_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="0/7"
        android:textColor="@color/col_text3"
        android:textSize="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/nick_input_desc"
        android:textColor="@color/col_text2"
        android:textSize="12dp" />

    <View
        android:id="@+id/view_mydialog_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <com.allen.library.SuperButton
            android:id="@+id/sb_nickdialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/text_cancel"
            android:textColor="@color/white"
            android:textSize="15dp"
            stv:sCornersRadius="5dp"
            stv:sGravity="center"
            stv:sSelectorNormalColor="@color/col_text3"
            stv:sSelectorPressedColor="@color/col_text4"
            stv:sUseSelector="true" />


        <com.allen.library.SuperButton
            android:id="@+id/sb_nickdialog_confir"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/text_save"
            android:textColor="@color/white"
            android:textSize="15dp"
            stv:sCornersRadius="5dp"
            stv:sGravity="center"
            stv:sSelectorNormalColor="@color/app_theme"
            stv:sSelectorPressedColor="@color/col_text4"
            stv:sUseSelector="true" />

    </LinearLayout>

</LinearLayout>