<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:orientation="vertical"
    tools:context=".ui.activity.me.LanguageActivity">


    <include layout="@layout/include_title" />

    <TextView
        android:id="@+id/tv_language_zhrch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_bg"
        android:padding="15dp"
        android:text="@string/Language_zh_rch"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/Language_zhrtw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/black_bg"
        android:padding="15dp"
        android:text="@string/Language_zh_rtw"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tv_language_enrus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/black_bg"
        android:padding="15dp"
        android:text="@string/Language_en_rus"
        android:textColor="@color/white"
        android:textSize="16dp" />


</LinearLayout>