<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/include_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/login_mobile"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/text_nation"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_loginmobile_nation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/text_china"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/iv_loginmobile_nationright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/white"
                android:src="@mipmap/return_back_right" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_loginmobile_phonecode"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/login_mobile"
                android:drawablePadding="10dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:drawableTint="@color/white"
                android:text="@string/text_86"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <View
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_marginLeft="15dp"
                android:background="@color/white" />

            <EditText
                android:id="@+id/et_loginmobile_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/mobile_input"
                android:maxLength="11"
                android:paddingLeft="15dp"
                android:inputType="number"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16dp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@color/white"
                android:src="@mipmap/login_pswd" />

            <EditText
                android:id="@+id/et_loginmobile_pswd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/mobile_pswd"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="15dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/iv_loginmobile_pswdlook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@mipmap/psw_icon_unhint" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/bt_loginmobile_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:background="@mipmap/yellow_gradual_bg"
            android:gravity="center"
            android:text="@string/text_login"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_loginmobile_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/login_agree"
            android:textColor="@color/white"
            android:textSize="12dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tv_loginmobile_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/pswd_forget"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_loginmobile_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="15dp"
            android:text="@string/register_account"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

</RelativeLayout>