<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:id="@+id/rl_promotecode_activity"
    tools:context=".ui.activity.me.PromoteCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include layout="@layout/include_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@mipmap/icon_promote_code_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/promote_down_app"
                android:textColor="@color/col_text1"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/iv_promotecode_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_cover_xhsp" />

            <TextView
                android:id="@+id/tv_promotecode_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/col_text1"
                android:textSize="26dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/promote_your_code"
                android:textColor="@color/col_text1"
                android:textSize="12dp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:text="@string/promote_save_tip"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/sb_promotecode_save"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/promote_save"
                    android:background="@drawable/icon_promote_button_bg"
                    android:textColor="@color/col_text1"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_add_num" />
            </FrameLayout>

            <Button
                android:id="@+id/sb_promotecode_cope"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/promote_cope"
                android:background="@drawable/icon_copy_button_bg"
                android:textColor="@color/col_text1"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/promote_open_tip"
        android:textColor="@color/white"
        android:textSize="12dp" />

</RelativeLayout>