<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_rank_top"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_rank_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rank_top_selector"
            android:gravity="center"
            android:text="@string/rankday"
            android:textColor="@color/col_text1"
            android:textSize="@dimen/text_16dp"></TextView>

        <TextView
            android:id="@+id/tv_rank_week"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rank_top_selector"
            android:gravity="center"
            android:text="@string/rankweek"
            android:textColor="@color/col_text1"
            android:textSize="@dimen/text_16dp"></TextView>

        <TextView
            android:id="@+id/tv_rank_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rank_top_selector"
            android:gravity="center"
            android:text="@string/rankmonth"
            android:textColor="@color/col_text1"
            android:textSize="@dimen/text_16dp"></TextView>
    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_nocontent"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:text="@string/nodata"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18dp"
                android:visibility="gone" />
        </RelativeLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>